--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -95,7 +95,7 @@
 					// 等待的对话框
 					var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
 					//发送网络请求，data为网络返回值
-					postDataEncry(storageKeyName.MAINURL + 'PostRePW', enData, comData, wd, function(data) {
+					postDataEncry(storageKeyName.MAINURL + 'PostRePW', enData, comData, 0, wd, function(data) {
 						//成功，关闭等待框
 						wd.close();
 						console.log('11111success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
