--- a/JiaoBaoYun-hb/html/index.html
+++ b/JiaoBaoYun-hb/html/index.html
@@ -12,6 +12,7 @@
 		<script type="text/javascript" src="../js/utils/Statusbar.js"></script>
 		<script type="text/javascript" src="../js/index.js"></script>
 		<script src="../js/main/slide_navigation.js"></script>
+		<script src="../js/utils/events.js"></script>
 	</head>
 
 	<body>
