--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -99,6 +99,12 @@
 						//成功，关闭等待框
 						wd.close();
 						console.log('11111success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+						if(data.RspCode != 0000) {
+							mui.toast(data.RspTxt);
+							return;
+						} else {
+							mui.toast('修改密码成功')
+						}
 						//存储到手机本地
 						//								window.myStorage.setItem(window.storageKeyName.PERSONALINFO, data.RspData);
 					});
