--- a/JiaoBaoYun-hb/html/tab-zone.html
+++ b/JiaoBaoYun-hb/html/tab-zone.html
@@ -43,13 +43,13 @@
 			}
 			/*通过下面的class名区分列表*/
 			/*第一个班级列表*/
-			.parent-table1 {}
+			/*.parent-table1 {}*/
 			/*第一个班级列表cell*/
-			.parent-cell1 {}
+			/*.parent-cell1 {}*/
 			/*第二个班级列表*/
-			.parent-table2 {}
+			/*.parent-table2 {}*/
 			/*第二个班级列表cell*/
-			.parent-cell2 {}
+			/*.parent-cell2 {}*/
 		</style>
 	</head>
 
