--- a/JiaoBaoYun-hb/html/cloud/app_keeprecord.html
+++ b/JiaoBaoYun-hb/html/cloud/app_keeprecord.html
@@ -22,6 +22,12 @@
 				background-color: white;
 			}
 
+			.keep-noclass {
+				/*无班级*/
+				text-align: center;
+				margin-top: 20px;
+			}
+
 			.mui-slider .mui-segmented-control.mui-segmented-control-inverted~ .mui-slider-group .mui-slider-item {
 				border-top: 0px solid #c8c7cc;
 				border-bottom: 0px solid #c8c7cc;
@@ -46,6 +52,40 @@
 				background-color: #64A1EB;
 				z-index: 999;
 			}
+
+			.mui-table-view-cell {
+				padding: 10px 10px;
+			}
+
+			.keep-member {
+				text-align: center;
+				height: 75px;
+			}
+
+			.keep-member img {
+				border-radius: 50%;
+				height: 40px;
+				width: 40px;
+				max-width: 40px;
+			}
+
+			.keep-box-shadow-border {
+				box-shadow: 1px 1px 1px #888888;
+				border: 1px solid #F2F2F2;
+				padding: 3px;
+			}
+
+			.addclass {
+				/*添加班级的元素*/
+			}
+
+			.addclass-icon {
+				position: absolute;
+				border: 0px solid #ddd;
+				font-size: 25px;
+				color: #C7C7CC;
+				right: 0px;
+			}
 		</style>
 	</head>
 
@@ -57,41 +97,60 @@
 			<a class="mui-icon iconfont icon-links mui-pull-right" style="margin-right: 5px;margin-top: 2px;"></a>
 		</header>
 		<div class="mui-content">
-			<div class="keep-line-blue"></div>
-			<div id="slider" class="mui-slider mui-fullscreen">
+			<div class="mui-popover" style="width: 100%;top: 150px;height: 200px;">
+				<ul class="mui-table-view">
+					<img id="closepop" src="../../image/cloud/record_addclassclose.png" style="height: 30px;float: right;margin: 10px;" />
+					<input id="inputclassname" type="text" class="mui-input-clear" placeholder="请输入班级名称" style="width:80% ;margin-left: 10%;text-align: center;border-radius: 50px;">
+					<button id="createclass" type="button" class="mui-btn mui-btn-blue mui-btn-block" style="border-radius: 50px;height: 40px;width: 80%;left: 10%;padding: 0;">创建</button>
+				</ul>
+			</div>
+			<div id="noclass" class="keep-noclass" style="display: none;">
+				<h5>现在没有班级请点击一下按钮创建班级</h5>
+				<div>
+					<img class="addclass" src="../../image/cloud/record_addclass.gif" />
+				</div>
+			</div>
+			<div id="line" class="keep-line-blue" style="display: none;"></div>
+			<div id="slider" class="mui-slider mui-fullscreen" style="display: none;">
 				<div id="sliderSegmentedControl" class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
-					<div class="mui-scroll">
-						<a class="mui-control-item mui-active" href="#item1mobile">
+					<div id="classlist" class="mui-scroll">
+						<a class="mui-control-item" href="#keepdefault">
 							1001班
 						</a>
-						<a class="mui-control-item" href="#item2mobile">
+						<a class="mui-control-item" href="#1002班">
 							1002班
 						</a>
-						<a class="mui-control-item" style="width: 40px;">
+						<a id="controladd" class="mui-control-item" style="width: 40px;">
 						</a>
-						<div id="addiconplus" class="mui-icon mui-icon-plus" style="position: absolute; border: 0px solid #ddd;font-size:25px;color: #C7C7CC;right:0px;"></div>
+						<div class="mui-icon mui-icon-plus addclass addclass-icon" style="position: absolute;border: 0px solid #ddd;font-size: 25px;color: #C7C7CC;right: 0px;"></div>
 					</div>
 				</div>
-				<div class="mui-slider-group">
-					<div id="item1mobile" class="mui-slider-item mui-control-content mui-active">
-						<div id="scroll1" class="mui-scroll-wrapper">
+				<div id="classmemberlist" class="mui-slider-group">
+					<div id="keepdefault" class="mui-slider-item mui-control-content mui-active">
+						<div class="mui-scroll-wrapper">
 							<div class="mui-scroll">
 								<ul class="mui-table-view">
 									<div class="mui-row" style="margin-top: 8px;">
-										<li class="mui-table-view-cell mui-media mui-col-xs-3 mui-col-sm-3" style="text-align: center;">
-											<div style="box-shadow: 1px 1px 1px #888888;border:1px solid #F2F2F2;padding: 3px;">
-												<img src="../../image/knowledge/1.png" style="border-radius: 50%;height: 40px;width: 40px;" />
+										<li class="mui-table-view-cell mui-media mui-col-xs-3 mui-col-sm-3">
+											<div class="keep-box-shadow-border keep-member">
+												<img src="../../image/quan/u108.jpg" />
 												<p class="mui-ellipsis">李伟</p>
 											</div>
 										</li>
-										<li class="mui-table-view-cell mui-media mui-col-xs-3 mui-col-sm-3" style="text-align: center;">
-											<div style="box-shadow: 1px 1px 1px #888888;border:1px solid #F2F2F2;padding: 3px;">
-												<img src="../../image/knowledge/1.png" style="border-radius: 50%;height: 40px;width: 40px;" />
-												<input type="text" class="mui-input-clear" style="height: 20px;font-size: 10px;">
+										<li class="mui-table-view-cell mui-media mui-col-xs-3 mui-col-sm-3">
+											<div class="keep-box-shadow-border keep-member">
+												<img src="../../image/cloud/cloud_keeprecord.png" />
+												<p class="mui-ellipsis">李伟李伟</p>
 											</div>
 										</li>
-										<li class="mui-table-view-cell mui-media mui-col-xs-3 mui-col-sm-3" style="text-align: center;">
-											<div style="box-shadow: 1px 1px 1px #888888;border:1px solid #F2F2F2;padding: 3px;">
+										<li class="mui-table-view-cell mui-media mui-col-xs-3 mui-col-sm-3">
+											<div class="keep-box-shadow-border keep-member">
+												<img src="../../image/quan/u108.jpg" />
+												<p class="mui-ellipsis">李伟</p>
+											</div>
+										</li>
+										<li class="mui-table-view-cell mui-media mui-col-xs-3 mui-col-sm-3 ">
+											<div class="keep-box-shadow-border keep-member">
 												<img src="../../image/cloud/record_add.png" style="height: 30px;width: 30px;margin-top: 18px;" />
 											</div>
 										</li>
@@ -100,70 +159,35 @@
 							</div>
 						</div>
 					</div>
-					<div id="item2mobile" class="mui-slider-item mui-control-content">
+					<div id="1002班" class="mui-slider-item mui-control-content">
 						<div class="mui-scroll-wrapper">
 							<div class="mui-scroll">
 								<ul class="mui-table-view">
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-1
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-2
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-3
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-4
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-5
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-6
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-7
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-8
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-9
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-10
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-11
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-12
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-13
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-14
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-15
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-16
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-17
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-18
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-19
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-20
-									</li>
+									<div class="mui-row" style="margin-top: 8px;">
+										<li class="mui-table-view-cell mui-media mui-col-xs-3 mui-col-sm-3">
+											<div class="keep-box-shadow-border keep-member">
+												<img src="../../image/quan/u108.jpg" />
+												<p class="mui-ellipsis">李伟</p>
+											</div>
+										</li>
+										<li class="mui-table-view-cell mui-media mui-col-xs-3 mui-col-sm-3">
+											<div class="keep-box-shadow-border keep-member">
+												<img src="../../image/cloud/cloud_keeprecord.png" />
+												<p class="mui-ellipsis">李伟李伟</p>
+											</div>
+										</li>
+										<li class="mui-table-view-cell mui-media mui-col-xs-3 mui-col-sm-3">
+											<div class="keep-box-shadow-border keep-member">
+												<img src="../../image/quan/u108.jpg" />
+												<p class="mui-ellipsis">李伟</p>
+											</div>
+										</li>
+										<li class="mui-table-view-cell mui-media mui-col-xs-3 mui-col-sm-3 ">
+											<div class="keep-box-shadow-border keep-member">
+												<img src="../../image/cloud/record_add.png" style="height: 30px;width: 30px;margin-top: 18px;" />
+											</div>
+										</li>
+									</div>
 								</ul>
 							</div>
 						</div>
@@ -176,10 +200,103 @@
 	<script type="text/javascript">
 		mui.init();
 		mui.plusReady(function() {
-			mui('.mui-scroll-wrapper').scroll({
-				indicators: true, //是否显示滚动条
+			var className = []; //记录所有班级的名称
+			var content = document.body.querySelector('.mui-content');
+			var classlist = document.getElementById("classlist"); //班级栏
+			var controladd = document.getElementById("controladd"); //班级栏添加班级按钮前一个item
+			var classmemberlist = document.getElementById("classmemberlist"); //成员列表
+
+			if(className.length == 0) {
+				document.getElementById("noclass").style.display = 'inline';
+				document.getElementById("noclass").style.textAlign = "center";
+			} else {
+				document.getElementById("line").style.display = 'inline';
+				document.getElementById("slider").style.display = 'inline';
+			}
+
+
+			//---创建班级popover---start---
+			//关闭创建班级界面
+			document.getElementById('closepop').addEventListener('tap', function() {
+				mui('.mui-popover').popover('hide');
 			});
-		})
+			//创建班级
+			document.getElementById('createclass').addEventListener('tap', function() {
+				var inputclass = document.getElementById("inputclassname");
+				var name = inputclass.value; //创建的班级名称
+				if(name == '') {
+					mui.toast('不允许为空');
+				} else {
+					//发送数据并获得成功创建的回调后
+					if(className.length == 0) {
+						//移除没有班级的界面
+						document.getElementById("noclass").style.display = 'none';
+						document.getElementById("line").style.display = 'inline';
+						document.getElementById("slider").style.display = 'inline';
+					}
+					className.push(name);
+					addClass(name);
+					mui('.mui-popover').popover('hide');
+					inputclass.value = '';
+				}
+
+			});
+			//---创建班级popover---end---
+
+			//所有的添加班级按钮监听
+			mui('.mui-content').on('tap', '.addclass', function() {
+				mui('.mui-popover').popover('show');
+			});
+
+			/**
+			 * 班级栏添加一个班级
+			 */
+			function addClass(name) {
+				//班级栏添加班级
+				var a = document.createElement('a');
+				a.innerText = name;
+				if(className.length == 1) {
+					a.className = 'mui-control-item mui-active';
+				} else {
+					a.className = 'mui-control-item';
+				}
+				a.setAttribute('href', '#' + name);
+				classlist.insertBefore(a, controladd);
+
+				//成员栏添加默认元素
+				var div = document.createElement('div');
+				div.id = name;
+				div.className = 'mui-slider-item mui-control-content';
+				div.innerHTML = '<div class="mui-scroll-wrapper">\
+								<div class="mui-scroll">\
+									<ul class="mui-table-view">\
+										<div class="mui-row" style="margin-top: 8px;">\
+											<li class="mui-table-view-cell mui-media mui-col-xs-3 mui-col-sm-3">\
+												<div class="keep-box-shadow-border keep-member">\
+													<img src="../../image/quan/u108.jpg" />\
+													<p class="mui-ellipsis">李伟</p>\
+												</div>\
+											</li>\
+											<li class="mui-table-view-cell mui-media mui-col-xs-3 mui-col-sm-3">\
+												<div class="keep-box-shadow-border keep-member">\
+													<img src="../../image/quan/u108.jpg" />\
+													<p class="mui-ellipsis">李伟</p>\
+												</div>\
+											</li>\
+											<li class="mui-table-view-cell mui-media mui-col-xs-3 mui-col-sm-3 ">\
+												<div class="keep-box-shadow-border keep-member">\
+													<img src="../../image/cloud/record_add.png" style="height: 30px;width: 30px;margin-top: 18px;" />\
+												</div>\
+											</li>\
+										</div>\
+									</ul>\
+								</div>\
+							</div>';
+
+				classmemberlist.appendChild(div);
+			}
+
+		});
 	</script>
 
 </html>
