--- a/JiaoBaoYun-hb/html/clip/clip_sub.html
+++ b/JiaoBaoYun-hb/html/clip/clip_sub.html
@@ -115,14 +115,14 @@
 				</div>
 			</div>
 		</div>
-		
+
 		<script src="../../js/utils/events.js" type="text/javascript" charset="utf-8"></script>
 		<!--本地存储-->
 		<script src="../../js/libs/myStorage/myStorage.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/storageKeyName.js" type="text/javascript" charset="utf-8"></script>
 		<!--加密-->
 		<script src="../../js/libs/RSA/Barrett.js" type="text/javascript" charset="utf-8"></script>
-		
+
 		<script src="../../js/libs/RSA/BigInt.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/libs/RSA/RSA.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/utils/RSAEncrypt.js" type="text/javascript" charset="utf-8"></script>
@@ -135,7 +135,7 @@
 		<script src="../../js/utils/sortSign.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/utils/signHmacSHA1.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/libs/jquery.js" type="text/javascript" charset="utf-8"></script>
-		
+
 		<!--testPro-->
 		<script src="../../js/testPro.js" type="text/javascript" charset="utf-8"></script>
 
@@ -152,27 +152,40 @@
 					}
 				}
 			});
-			
+
 			mui.plusReady(function() {
 				var titles = ["幸福是可以一起睡觉", "幸福是可以一起吃饭", "幸福是可以一起"];
-				var imgUrls=["../../image/clip/u292.png","../../image/clip/u296.png","../../image/clip/u298.png"]
-				//加黑条
+				var imgUrls = ["../../image/clip/u292.png", "../../image/clip/u296.png", "../../image/clip/u298.png"]
+					//加黑条
 				carousel.addStrip(imgUrls);
 				//加图片
-				carousel.createView(carousel.createList(imgUrls,titles))
+				carousel.createView(carousel.createList(imgUrls, titles))
 				var slider = mui("#slider11");
 				//轮播开始
 				slider.slider({
 					interval: 5000
 				});
-				
+
 				//test
-				document.getElementById('testBtn').addEventListener('tap',function () {
-				        console.log('testBtn');
-				        var tempData = {};
-				        testPro(tempData);
+				document.getElementById('testBtn').addEventListener('tap', function() {
+					console.log('testBtn');
+					var comData = {
+						vtp: 'unick', //uimg(头像),utxt(签名),unick(昵)称,usex(性别),uemail(邮件)
+						vvl: '测试修改昵称', //对应的值
+					};
+					// 等待的对话框
+					var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+					postData_jiaobaoYunPro_PostReUinf(comData, wd, function(data) {
+						wd.close();
+						console.log('90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+						if(data.RspCode == 0) {
+
+						} else {
+							mui.toast(data.RspTxt);
+						}
+					});
 				})
-				
+
 			});
 			/**
 			 * 下拉刷新具体业务实现
