--- a/JiaoBaoYun-hb/html/cloud/app_keeprecord.html
+++ b/JiaoBaoYun-hb/html/cloud/app_keeprecord.html
@@ -79,12 +79,8 @@
 				/*添加班级的元素*/
 			}
 
-			.addclass-icon {
-				position: absolute;
-				border: 0px solid #ddd;
-				font-size: 25px;
-				color: #C7C7CC;
-				right: 0px;
+			.addmember {
+				/*添加成员的元素*/
 			}
 		</style>
 	</head>
@@ -114,43 +110,25 @@
 			<div id="slider" class="mui-slider mui-fullscreen" style="display: none;">
 				<div id="sliderSegmentedControl" class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
 					<div id="classlist" class="mui-scroll">
-						<a class="mui-control-item" href="#keepdefault">
+						<!--<a class="mui-control-item" href="#1001班">
 							1001班
 						</a>
 						<a class="mui-control-item" href="#1002班">
 							1002班
-						</a>
+						</a>-->
 						<a id="controladd" class="mui-control-item" style="width: 40px;">
 						</a>
 						<div class="mui-icon mui-icon-plus addclass addclass-icon" style="position: absolute;border: 0px solid #ddd;font-size: 25px;color: #C7C7CC;right: 0px;"></div>
 					</div>
 				</div>
 				<div id="classmemberlist" class="mui-slider-group">
-					<div id="keepdefault" class="mui-slider-item mui-control-content mui-active">
+					<!--<div id="1001班" class="mui-slider-item mui-control-content mui-active">
 						<div class="mui-scroll-wrapper">
 							<div class="mui-scroll">
 								<ul class="mui-table-view">
 									<div class="mui-row" style="margin-top: 8px;">
-										<li class="mui-table-view-cell mui-media mui-col-xs-3 mui-col-sm-3">
-											<div class="keep-box-shadow-border keep-member">
-												<img src="../../image/quan/u108.jpg" />
-												<p class="mui-ellipsis">李伟</p>
-											</div>
-										</li>
-										<li class="mui-table-view-cell mui-media mui-col-xs-3 mui-col-sm-3">
-											<div class="keep-box-shadow-border keep-member">
-												<img src="../../image/cloud/cloud_keeprecord.png" />
-												<p class="mui-ellipsis">李伟李伟</p>
-											</div>
-										</li>
-										<li class="mui-table-view-cell mui-media mui-col-xs-3 mui-col-sm-3">
-											<div class="keep-box-shadow-border keep-member">
-												<img src="../../image/quan/u108.jpg" />
-												<p class="mui-ellipsis">李伟</p>
-											</div>
-										</li>
-										<li class="mui-table-view-cell mui-media mui-col-xs-3 mui-col-sm-3 ">
-											<div class="keep-box-shadow-border keep-member">
+										<li id="addmember_1001班"class="mui-table-view-cell mui-media mui-col-xs-3 mui-col-sm-3 ">
+											<div class="keep-box-shadow-border keep-member addmember"data-id="1001班">
 												<img src="../../image/cloud/record_add.png" style="height: 30px;width: 30px;margin-top: 18px;" />
 											</div>
 										</li>
@@ -170,20 +148,8 @@
 												<p class="mui-ellipsis">李伟</p>
 											</div>
 										</li>
-										<li class="mui-table-view-cell mui-media mui-col-xs-3 mui-col-sm-3">
-											<div class="keep-box-shadow-border keep-member">
-												<img src="../../image/cloud/cloud_keeprecord.png" />
-												<p class="mui-ellipsis">李伟李伟</p>
-											</div>
-										</li>
-										<li class="mui-table-view-cell mui-media mui-col-xs-3 mui-col-sm-3">
-											<div class="keep-box-shadow-border keep-member">
-												<img src="../../image/quan/u108.jpg" />
-												<p class="mui-ellipsis">李伟</p>
-											</div>
-										</li>
-										<li class="mui-table-view-cell mui-media mui-col-xs-3 mui-col-sm-3 ">
-											<div class="keep-box-shadow-border keep-member">
+										<li id="addmember_1002班" class="mui-table-view-cell mui-media mui-col-xs-3 mui-col-sm-3 ">
+											<div class="keep-box-shadow-border keep-member addmember"data-id="1002班">
 												<img src="../../image/cloud/record_add.png" style="height: 30px;width: 30px;margin-top: 18px;" />
 											</div>
 										</li>
@@ -191,7 +157,7 @@
 								</ul>
 							</div>
 						</div>
-					</div>
+					</div>-->
 				</div>
 			</div>
 		</div>
@@ -200,26 +166,31 @@
 	<script type="text/javascript">
 		mui.init();
 		mui.plusReady(function() {
-			var className = []; //记录所有班级的名称
+			var classNameList = []; //记录所有班级的名称
 			var content = document.body.querySelector('.mui-content');
 			var classlist = document.getElementById("classlist"); //班级栏
 			var controladd = document.getElementById("controladd"); //班级栏添加班级按钮前一个item
 			var classmemberlist = document.getElementById("classmemberlist"); //成员列表
-
-			if(className.length == 0) {
+			classNameList = ['123', '321'];
+			if(classNameList.length == 0) {
+				//没有班级
 				document.getElementById("noclass").style.display = 'inline';
 				document.getElementById("noclass").style.textAlign = "center";
 			} else {
+				//有班级
 				document.getElementById("line").style.display = 'inline';
 				document.getElementById("slider").style.display = 'inline';
+				mui.each(classNameList, function(index, item) {
+					addClass(item);
+				});
 			}
-
 
 			//---创建班级popover---start---
 			//关闭创建班级界面
 			document.getElementById('closepop').addEventListener('tap', function() {
 				mui('.mui-popover').popover('hide');
 			});
+
 			//创建班级
 			document.getElementById('createclass').addEventListener('tap', function() {
 				var inputclass = document.getElementById("inputclassname");
@@ -228,13 +199,13 @@
 					mui.toast('不允许为空');
 				} else {
 					//发送数据并获得成功创建的回调后
-					if(className.length == 0) {
+					if(classNameList.length == 0) {
 						//移除没有班级的界面
 						document.getElementById("noclass").style.display = 'none';
 						document.getElementById("line").style.display = 'inline';
 						document.getElementById("slider").style.display = 'inline';
 					}
-					className.push(name);
+					classNameList.push(name);
 					addClass(name);
 					mui('.mui-popover').popover('hide');
 					inputclass.value = '';
@@ -248,14 +219,37 @@
 				mui('.mui-popover').popover('show');
 			});
 
+			//监听添加成员按钮班级
+			mui('.mui-content').on('tap', '.addmember', function(e) {
+				var id = this.getAttribute('data-id');
+				var addid = 'addmember_' + id;
+				var addTable = document.getElementById(addid);
+				e.detail.gesture.preventDefault(); //修复iOS 8.x平台存在的bug，使用plus.nativeUI.prompt会造成输入法闪一下又没了
+				var btnArray = ['取消', '确定'];
+				mui.prompt('请输入添加的新成员：', '添加新成员', '新成员', btnArray, function(e) {
+					if(e.index == 1) {
+						//点击确定
+						if(e.value == '') {
+							mui.toast('不能为空');
+						} else {
+							//向服务器发送数据并获得成功的回调
+							var classTable = document.getElementById(id).querySelector('.mui-row');
+							addMember(classTable, addTable, e.value);
+						}
+					} else {
+						//点击取消
+					}
+				});
+			});
+
 			/**
-			 * 班级栏添加一个班级
+			 * 班级栏添加一个班级，对应的成员栏添加默认界面
 			 */
 			function addClass(name) {
 				//班级栏添加班级
 				var a = document.createElement('a');
 				a.innerText = name;
-				if(className.length == 1) {
+				if(classNameList[0] == name) {
 					a.className = 'mui-control-item mui-active';
 				} else {
 					a.className = 'mui-control-item';
@@ -271,20 +265,8 @@
 								<div class="mui-scroll">\
 									<ul class="mui-table-view">\
 										<div class="mui-row" style="margin-top: 8px;">\
-											<li class="mui-table-view-cell mui-media mui-col-xs-3 mui-col-sm-3">\
-												<div class="keep-box-shadow-border keep-member">\
-													<img src="../../image/quan/u108.jpg" />\
-													<p class="mui-ellipsis">李伟</p>\
-												</div>\
-											</li>\
-											<li class="mui-table-view-cell mui-media mui-col-xs-3 mui-col-sm-3">\
-												<div class="keep-box-shadow-border keep-member">\
-													<img src="../../image/quan/u108.jpg" />\
-													<p class="mui-ellipsis">李伟</p>\
-												</div>\
-											</li>\
-											<li class="mui-table-view-cell mui-media mui-col-xs-3 mui-col-sm-3 ">\
-												<div class="keep-box-shadow-border keep-member">\
+											<li id="addmember_' + name + '" class="mui-table-view-cell mui-media mui-col-xs-3 mui-col-sm-3">\
+												<div class="keep-box-shadow-border keep-member addmember" data-id="' + name + '">\
 													<img src="../../image/cloud/record_add.png" style="height: 30px;width: 30px;margin-top: 18px;" />\
 												</div>\
 											</li>\
@@ -292,10 +274,25 @@
 									</ul>\
 								</div>\
 							</div>';
-
 				classmemberlist.appendChild(div);
+				mui(".mui-slider").slider().refresh();
 			}
 
+			/**
+			 * 添加成员
+			 * @param {Object} classTable
+			 * @param {Object} addTable
+			 * @param {Object} value
+			 */
+			function addMember(classTable, addTable, value) {
+				var li = document.createElement('li');
+				li.className = 'mui-table-view-cell mui-media mui-col-xs-3 mui-col-sm-3';
+				li.innerHTML = '<div class="keep-box-shadow-border keep-member">\
+									<img src="../../image/quan/u108.jpg" />\
+									<p class="mui-ellipsis">' + value + '</p>\
+								</div>';
+				classTable.insertBefore(li, addTable);
+			}
 		});
 	</script>
 
