与我相关界面

--- a/JiaoBaoYun-hb/html/quan/zonep_sub.html
+++ b/JiaoBaoYun-hb/html/quan/zonep_sub.html
@@ -16,7 +16,7 @@
 				background: transparent;
 				/*背景色透明*/
 			}
-
+			
 			.mui-table-view-cell {
 				background: white;
 				/*cell 背景设为白色*/
@@ -24,38 +24,38 @@
 				/*内边距为0*/
 				margin-bottom: 10px;
 			}
-
+			
 			.mui-table-view:before,
 			.mui-table-view:after,
 			.mui-table-view-cell:after {
 				height: 0px;
 				/*去掉横线*/
 			}
-
+			
 			.mui-row-padding-8px {
 				padding: 8px;
 				/*内边距为8px*/
 				padding: 12px;
 			}
-
+			
 			.dynamic-personal-image {
 				/*个人头像圆形*/
 				border-radius: 50%;
 				width: 50px;
 				height: 50px;
 			}
-
+			
 			.dynamic-image-div {
 				/*内容中图片之间的内边距*/
 				padding: 1px;
 			}
-
+			
 			.dynamic-image {
 				/*内容的图片占全部空间*/
 				width: 100%;
 				height: 100%;
 			}
-
+			
 			.dynamic-icon,
 			.dynamic-icon-praise,
 			.dynamic-icon-comment,
@@ -65,13 +65,13 @@
 				width: 20px;
 				margin-left: 20px;
 			}
-
+			
 			.dynamic-icon-Level {
 				/*等级图标*/
 				height: 20px;
 				margin-left: 10px;
 			}
-
+			
 			.dynamic-icon-praise-small {
 				/*点赞列表的小图标*/
 				height: 15px;
@@ -79,40 +79,40 @@
 				margin-right: 5px;
 				margin-bottom: 0px;
 			}
-
+			
 			.dynamic-margin-top-10px {
 				margin-top: 10px;
 			}
-
+			
 			.dynamic-padding-left-10px {
 				padding-left: 10px;
 			}
-
+			
 			.dynamic-line {
 				/*点赞列表上面的横线*/
 				height: 1px;
 				width: 100%;
 				background: #CCCCCC;
 			}
-
+			
 			.dynamic-contenttext {
 				/*动态内容*/
 				font-family: '微软雅黑 Regular', '微软雅黑';
 				/*字体样式*/
 			}
-
+			
 			.dynamic-praise-name,
 			.dynamic-comment-name {
 				/*点赞者和评论者的名字*/
 				color: #1277C7;
 			}
-
+			
 			.dynamic-comment-btn {
 				/*底部的评论按钮*/
 				width: 100%;
 				margin-top: 10px;
 			}
-
+			
 			.dynamic-image-more {
 				/*更多图片*/
 				position: absolute;
@@ -132,120 +132,82 @@
 			<div class="mui-scroll">
 				<!--数据列表-->
 				<ul class="mui-table-view">
-					<!--<li class="mui-table-view-cell">
+					<li id="0" class="mui-table-view-cell">
 						<div class="mui-row mui-row-padding-8px">
 							<div class="mui-col-sm-12 mui-col-xs-12">
-								<div class="mui-media-body mui-pull-left">
-									<img class=" dynamic-personal-image" src="../../image/dynamic/u101.png">
-								</div>
-								<div class="mui-media-body dynamic-padding-left-10px">
-									<span class="mui-icon mui-icon-arrowdown mui-pull-right"></span>
-									<h4>小熊猫<img src="../../image/dynamic/icon_Level39.png" class=" dynamic-icon-Level" /></h4>
-									<p>昨天16:55</p>
+								<div class="mui-media-body mui-pull-left"><img class=" dynamic-personal-image" src="../../image/dynamic/u101.png"></div>
+								<div class="mui-media-body dynamic-padding-left-10px"><span class="mui-icon mui-icon-arrowdown mui-pull-right"></span>
+									<h4>大熊猫<img src="../../image/dynamic/icon_Level39.png" class=" dynamic-icon-Level"></h4>
+									<p>2016-10-12 10:55</p>
 								</div>
 							</div>
 							<div class="mui-col-sm-12 mui-col-xs-12">
 								<div class="mui-media-body dynamic-contenttext">
-									<font>
-										一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十
-									</font>
+									<font>一二三四二二三四三二三四四二三四</font>
 								</div>
 							</div>
 						</div>
-
-						<div class="mui-row">
-							<div class="mui-col-sm-12 mui-col-xs-12 dynamic-image-div" style="height: 200px;">
-								<img class="dynamic-image" src="../../image/longImage.png">
-							</div>
-							<div class="mui-col-sm-4 mui-col-xs-4 dynamic-image-div" style="height: 100px;">
-								<img class="dynamic-image" src="../../image/longImage.png">
-							</div>
-							<div class="mui-col-sm-4 mui-col-xs-4 dynamic-image-div" style="height: 100px;">
+						<div class="mui-row ">
+							<div class="mui-col-sm-4 mui-col-xs-4 dynamic-image-div" style="height: 125px;"><img class="dynamic-image" src="../../image/dynamic/u101.png"></div>
+							<div class="mui-col-sm-4 mui-col-xs-4 dynamic-image-div" style="height: 125px;"><img class="dynamic-image" src="../../image/dynamic/u101.png"></div>
+							<div class="mui-col-sm-4 mui-col-xs-4 dynamic-image-div" style="height: 125px;"><img class="dynamic-image" src="../../image/dynamic/u101.png"></div>
+							<div class="mui-col-sm-4 mui-col-xs-4 dynamic-image-div" style="height: 125px;"><img class="dynamic-image" src="../../image/dynamic/u101.png"></div>
+							<div class="mui-col-sm-4 mui-col-xs-4 dynamic-image-div" style="height: 125px;"><img class="dynamic-image" src="../../image/dynamic/u101.png"></div>
+							<div class="mui-col-sm-4 mui-col-xs-4 dynamic-image-div" style="height: 125px;"><img class="dynamic-image" src="../../image/dynamic/u101.png"></div>
+							<div class="mui-col-sm-4 mui-col-xs-4 dynamic-image-div" style="height: 125px;"><img class="dynamic-image" src="../../image/dynamic/u101.png"></div>
+							<div class="mui-col-sm-4 mui-col-xs-4 dynamic-image-div" style="height: 125px;"><img class="dynamic-image" src="../../image/dynamic/u101.png"></div>
+							<div class="mui-col-sm-4 mui-col-xs-4 dynamic-image-div" style="height: 125px;">
 								<div class="dynamic-image-more">
-									<font style="line-height: 100px;">+4</font>
-								</div>
-								<img class="dynamic-image" src="../../image/longImage.png">
-							</div>
-							<div class="mui-col-sm-4 mui-col-xs-4 dynamic-image-div" style="height: 100px;">
-								<img class="dynamic-image" src="../../image/dynamic/u131.png">
-							</div>
-							<div class="mui-col-sm-4 mui-col-xs-4 dynamic-image-div" style="height: 100px;">
-								<img class="dynamic-image" src="../../image/dynamic/u131.png">
-							</div>
-							<div class="mui-col-sm-4 mui-col-xs-4 dynamic-image-div" style="height: 100px;">
-								<img class="dynamic-image" src="../../image/dynamic/u101.png">
-							</div>
+									<font style="line-height: 125px;">+1</font>
+								</div><img class="dynamic-image" src="../../image/dynamic/u101.png"></div>
 						</div>
-
 						<div class="mui-row mui-row-padding-8px">
 							<div class="mui-col-sm-12 mui-col-xs-12">
 								<div class="mui-media-body">
-									<p>
-										<span class="mui-icon mui-icon-image"></span> 上传了12张图片到相册《手机相册》
-									</p>
+									<p><span class="mui-icon mui-icon-image"></span>上传了10张图片到相册《手机相册》</p>
 								</div>
 							</div>
 							<div class="mui-col-sm-12 mui-col-xs-12 dynamic-margin-top-10px">
-								<div class="mui-media-body mui-pull-right">
-									<img src="../../image/dynamic/icon_praise.png" class="dynamic-icon-praise" />
-									<img src="../../image/dynamic/icon_comment.png" class="dynamic-icon-comment" />
-									<img src="../../image/dynamic/icon_forward.png" class="dynamic-icon-forward" />
-								</div>
+								<div class="mui-media-body mui-pull-right"><img src="../../image/dynamic/icon_praise.png" class="dynamic-icon-praise"><img src="../../image/dynamic/icon_comment.png" class="dynamic-icon-comment"><img src="../../image/dynamic/icon_forward.png" class="dynamic-icon-forward"></div>
 								<div class="mui-media-body">
-									<p>浏览118次</p>
+									<p>浏览30次</p>
 								</div>
 							</div>
 							<div class="mui-col-sm-12 mui-col-xs-12 ">
-								<div class="mui-media-body dynamic-line">
-								</div>
+								<div class="mui-media-body dynamic-line"></div>
 							</div>
 							<div class="mui-col-sm-12 mui-col-xs-12 dynamic-margin-top-10px">
-								<div class="mui-media-body">
-									<img src="../../image/dynamic/icon_praise_small.png" class="dynamic-icon-praise-small mui-pull-left" />
-									<font class="common-font-family-Regular dynamic-praise-name">一二三四五六七八九十</font>
-									<font class="common-font-family-Regular dynamic-praise-name">、一二三四五</font>
-									<font class="common-font-family-Regular dynamic-praise-name">、一二三四</font>
+								<div class="mui-media-body"><img src="../../image/dynamic/icon_praise_small.png" class="dynamic-icon-praise-small mui-pull-left">
+									<font class="common-font-family-Regular dynamic-praise-name">一</font>
+									<font class="common-font-family-Regular dynamic-praise-name">、一二</font>
 									<font class="common-font-family-Regular dynamic-praise-name">、一二三</font>
-									<font class="common-font-family-Regular dynamic-praise-name">、一二三四五六七八九十</font>
-									<font class="common-font-family-Regular dynamic-praise-name">一二三四五六七八九十</font>
-									<font class="common-font-family-Regular dynamic-praise-name">、一二三四五</font>
 									<font class="common-font-family-Regular dynamic-praise-name">、一二三四</font>
-									<font class="common-font-family-Regular dynamic-praise-name">、一二三</font>
-									<font class="common-font-family-Regular dynamic-praise-name">、一二三四五六七八九十</font>
+									<font class="common-font-family-Regular dynamic-praise-name">、一二三四五</font>
+									<font class="common-font-family-Regular dynamic-praise-name">、一二三四五六</font>
+									<font class="common-font-family-Regular dynamic-praise-name">、一二三四五六七</font>
 								</div>
 							</div>
 							<div class="mui-col-sm-12 mui-col-xs-12">
 								<div class="mui-media-body">
 									<font class="common-font-family-Regular dynamic-comment-name">陪你上演地老天荒</font>
-									<font class="common-font-family-Regular">：嘚瑟</font>
+									<font class="common-font-family-Regular">：嘚瑟呵呵</font>
 								</div>
 								<div class="mui-media-body">
 									<font class="common-font-family-Regular dynamic-comment-name">孟祥菊</font>
 									<font class="common-font-family-Regular">回复</font>
 									<font class="common-font-family-Regular dynamic-comment-name">陪你上演地老天荒</font>
-									<font class="common-font-family-Regular">
-										：一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十
-									</font>
-								</div>
-								<div class="mui-media-body">
-									<font class="common-font-family-Regular dynamic-comment-name">一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十</font>
-									<font class="common-font-family-Regular">：你们家的喇叭花挺好看的呀一二三四五六七八九十</font>
-								</div>
-								<div class="mui-media-body">
-									<font class="common-font-family-Regular dynamic-comment-name">美心木门</font>
-									<font class="common-font-family-Regular">：~\(≧▽≦)/~</font>
+									<font class="common-font-family-Regular">一二三四五六七八九十</font>
 								</div>
 							</div>
-							<div class="mui-col-sm-12 mui-col-xs-12">
-								<button type="button" class="mui-btn dynamic-comment-btn"><p class="mui-pull-left">评论</p></button>
-							</div>
+							<div class="mui-col-sm-12 mui-col-xs-12"><button type="button" class="mui-btn dynamic-comment-btn"><p class="mui-pull-left">评论</p></button></div>
 						</div>
-					</li>-->
+					</li>
+
 				</ul>
 			</div>
 		</div>
 	</body>
-	<script>
+	<!--<script>
 		mui.init({
 			pullRefresh: {
 				container: '#pullrefresh',
@@ -411,6 +373,6 @@
 			Data = [InfoList, ImageList, InteractionList]
 			return Data;
 		}
-	</script>
+	</script>-->
 
 </html>
