--- a/JiaoBaoYun-hb/html/quan/aboutme_sub.html
+++ b/JiaoBaoYun-hb/html/quan/aboutme_sub.html
@@ -16,7 +16,7 @@
 				background: transparent;
 				/*背景色透明*/
 			}
-
+			
 			.mui-table-view-cell {
 				background: white;
 				/*cell 背景设为白色*/
@@ -24,38 +24,38 @@
 				/*内边距为0*/
 				margin-bottom: 10px;
 			}
-
+			
 			.mui-table-view:before,
 			.mui-table-view:after,
 			.mui-table-view-cell:after {
 				height: 0px;
 				/*去掉横线*/
 			}
-
+			
 			.mui-row-padding-8px {
 				padding: 8px;
 				/*内边距为8px*/
 				padding: 12px;
 			}
-
+			
 			.dynamic-personal-image {
 				/*个人头像圆形*/
 				border-radius: 50%;
 				width: 50px;
 				height: 50px;
 			}
-
+			
 			.dynamic-image-div {
 				/*内容中图片之间的内边距*/
 				padding: 1px;
 			}
-
+			
 			.dynamic-image {
 				/*内容的图片占全部空间*/
 				width: 100%;
 				height: 100%;
 			}
-
+			
 			.dynamic-icon,
 			.dynamic-icon-praise,
 			.dynamic-icon-comment,
@@ -65,13 +65,13 @@
 				width: 20px;
 				margin-left: 20px;
 			}
-
+			
 			.dynamic-icon-Level {
 				/*等级图标*/
 				height: 20px;
 				margin-left: 10px;
 			}
-
+			
 			.dynamic-icon-praise-small {
 				/*点赞列表的小图标*/
 				height: 15px;
@@ -79,40 +79,40 @@
 				margin-right: 5px;
 				margin-bottom: 0px;
 			}
-
+			
 			.dynamic-margin-top-10px {
 				margin-top: 10px;
 			}
-
+			
 			.dynamic-padding-left-10px {
 				padding-left: 10px;
 			}
-
+			
 			.dynamic-line {
 				/*点赞列表上面的横线*/
 				height: 1px;
 				width: 100%;
 				background: #CCCCCC;
 			}
-
+			
 			.dynamic-contenttext {
 				/*动态内容*/
 				font-family: '微软雅黑 Regular', '微软雅黑';
 				/*字体样式*/
 			}
-
+			
 			.dynamic-praise-name,
 			.dynamic-comment-name {
 				/*点赞者和评论者的名字*/
 				color: #1277C7;
 			}
-
+			
 			.dynamic-comment-btn {
 				/*底部的评论按钮*/
 				width: 100%;
 				margin-top: 10px;
 			}
-
+			
 			.dynamic-image-more {
 				/*更多图片*/
 				position: absolute;
@@ -132,277 +132,250 @@
 			<div class="mui-scroll">
 				<!--数据列表-->
 				<ul class="mui-table-view">
-					<!--<li class="mui-table-view-cell">
-						<div class="mui-row mui-row-padding-8px">
-							<div class="mui-col-sm-12 mui-col-xs-12">
+					<li id="0" class="mui-table-view-cell">
+						<div style="padding:12px">
+							<div class="mui-media-body mui-pull-left">
+								<img class=" dynamic-personal-image" src="../../image/dynamic/u101.png">
+							</div>
+							<div class="mui-media-body dynamic-padding-left-10px">
+								<span class=" mui-pull-right dynamic-comment-name">回复</span>
+								<h4>刘阳给我留言</h4>
+								<p>昨天 10:55</p>
+							</div>
+
+						</div>
+						<div style="padding: 5px 10px 10px 10px;">
+							有你的陪伴，人生才多姿多彩。有你的陪伴，人生才多姿多彩。有你的陪伴，人生才多姿多彩。
+						</div>
+
+						<div style="padding:0px 10px 10px 10px">
+									<font class="common-font-family-Regular dynamic-comment-name">孟祥菊</font>
+									<font class="common-font-family-Regular">回复</font>
+									<font class="common-font-family-Regular dynamic-comment-name">陪你上演地老天荒</font>
+									<font class="common-font-family-Regular">一二三四五六七八九十</font>
+						</div>
+					</li>
+
+					<li id="1" class="mui-table-view-cell">
+						<div style="padding:12px;background-color:white ">
+							<div style="background-color: white;">
 								<div class="mui-media-body mui-pull-left">
 									<img class=" dynamic-personal-image" src="../../image/dynamic/u101.png">
 								</div>
 								<div class="mui-media-body dynamic-padding-left-10px">
-									<span class="mui-icon mui-icon-arrowdown mui-pull-right"></span>
-									<h4>小熊猫<img src="../../image/dynamic/icon_Level39.png" class=" dynamic-icon-Level" /></h4>
-									<p>昨天16:55</p>
+									<span class=" mui-pull-right dynamic-comment-name" >回复</span>
+									<h4>李媛媛赞了我</h4>
+									<p>昨天 10:55</p>
 								</div>
 							</div>
-							<div class="mui-col-sm-12 mui-col-xs-12">
-								<div class="mui-media-body dynamic-contenttext">
-									<font>
-										一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十
-									</font>
-								</div>
+							<div style="margin:10px 0px;padding:5px;background-color: rgb(242,242,242);">
+								<img class=" dynamic-personal-image" src="../../image/dynamic/u101.png">
+								<font style="color:#1277C7 ;vertical-align: 80%;font-size: 16px;padding-left: 10px;">
+									刘阳：
+									<span style="color: black;">今天自己做的面包，孩子..</span>
+								</font>
+								</img>
 							</div>
 						</div>
 
-						<div class="mui-row">
-							<div class="mui-col-sm-12 mui-col-xs-12 dynamic-image-div" style="height: 200px;">
-								<img class="dynamic-image" src="../../image/longImage.png">
-							</div>
-							<div class="mui-col-sm-4 mui-col-xs-4 dynamic-image-div" style="height: 100px;">
-								<img class="dynamic-image" src="../../image/longImage.png">
-							</div>
-							<div class="mui-col-sm-4 mui-col-xs-4 dynamic-image-div" style="height: 100px;">
-								<div class="dynamic-image-more">
-									<font style="line-height: 100px;">+4</font>
-								</div>
-								<img class="dynamic-image" src="../../image/longImage.png">
-							</div>
-							<div class="mui-col-sm-4 mui-col-xs-4 dynamic-image-div" style="height: 100px;">
-								<img class="dynamic-image" src="../../image/dynamic/u131.png">
-							</div>
-							<div class="mui-col-sm-4 mui-col-xs-4 dynamic-image-div" style="height: 100px;">
-								<img class="dynamic-image" src="../../image/dynamic/u131.png">
-							</div>
-							<div class="mui-col-sm-4 mui-col-xs-4 dynamic-image-div" style="height: 100px;">
-								<img class="dynamic-image" src="../../image/dynamic/u101.png">
-							</div>
-						</div>
+					</li>
 
-						<div class="mui-row mui-row-padding-8px">
-							<div class="mui-col-sm-12 mui-col-xs-12">
-								<div class="mui-media-body">
-									<p>
-										<span class="mui-icon mui-icon-image"></span> 上传了12张图片到相册《手机相册》
-									</p>
+					<li id="2" class="mui-table-view-cell">
+						<div class="mui-row-padding-8px background-color: white;">
+								<div class="mui-media-body mui-pull-left">
+									<img class=" dynamic-personal-image" src="../../image/dynamic/u101.png">
+								</div>
+								<div class="mui-media-body dynamic-padding-left-10px">
+									<span class=" mui-pull-right dynamic-comment-name">回复</span>
+									<h4>李媛媛</h4>
+									<p>昨天 10:55</p>
 								</div>
 							</div>
-							<div class="mui-col-sm-12 mui-col-xs-12 dynamic-margin-top-10px">
-								<div class="mui-media-body mui-pull-right">
-									<img src="../../image/dynamic/icon_praise.png" class="dynamic-icon-praise" />
-									<img src="../../image/dynamic/icon_comment.png" class="dynamic-icon-comment" />
-									<img src="../../image/dynamic/icon_forward.png" class="dynamic-icon-forward" />
-								</div>
-								<div class="mui-media-body">
-									<p>浏览118次</p>
-								</div>
+							<div style="background-color: white;padding: 0px 10px 10px 10px">
+								<font>有你的陪伴，人生才多姿多彩。有你的陪伴，人生才多姿多彩。有你的陪伴，人生才多姿多彩。</font>
 							</div>
-							<div class="mui-col-sm-12 mui-col-xs-12 ">
-								<div class="mui-media-body dynamic-line">
-								</div>
+							<div style="margin-left: 10px;margin-bottom:5px;padding:5px;background-color: rgb(242,242,242);">
+								<img class=" dynamic-personal-image" src="../../image/dynamic/u101.png">
+								<font style="color:#1277C7 ;vertical-align: 80%;font-size: 16px;padding-left: 10px;">刘阳：<span style="color: black;">今天自己做的面包，孩子..</span></font>
+								</img>
 							</div>
-							<div class="mui-col-sm-12 mui-col-xs-12 dynamic-margin-top-10px">
-								<div class="mui-media-body">
-									<img src="../../image/dynamic/icon_praise_small.png" class="dynamic-icon-praise-small mui-pull-left" />
-									<font class="common-font-family-Regular dynamic-praise-name">一二三四五六七八九十</font>
-									<font class="common-font-family-Regular dynamic-praise-name">、一二三四五</font>
-									<font class="common-font-family-Regular dynamic-praise-name">、一二三四</font>
-									<font class="common-font-family-Regular dynamic-praise-name">、一二三</font>
-									<font class="common-font-family-Regular dynamic-praise-name">、一二三四五六七八九十</font>
-									<font class="common-font-family-Regular dynamic-praise-name">一二三四五六七八九十</font>
-									<font class="common-font-family-Regular dynamic-praise-name">、一二三四五</font>
-									<font class="common-font-family-Regular dynamic-praise-name">、一二三四</font>
-									<font class="common-font-family-Regular dynamic-praise-name">、一二三</font>
-									<font class="common-font-family-Regular dynamic-praise-name">、一二三四五六七八九十</font>
-								</div>
-							</div>
-							<div class="mui-col-sm-12 mui-col-xs-12">
+							<div style="padding: 10px;">
 								<div class="mui-media-body">
 									<font class="common-font-family-Regular dynamic-comment-name">陪你上演地老天荒</font>
-									<font class="common-font-family-Regular">：嘚瑟</font>
+									<font class="common-font-family-Regular">：嘚瑟呵呵</font>
 								</div>
 								<div class="mui-media-body">
 									<font class="common-font-family-Regular dynamic-comment-name">孟祥菊</font>
 									<font class="common-font-family-Regular">回复</font>
 									<font class="common-font-family-Regular dynamic-comment-name">陪你上演地老天荒</font>
-									<font class="common-font-family-Regular">
-										：一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十
-									</font>
+									<font class="common-font-family-Regular">一二三四五六七八九十</font>
 								</div>
-								<div class="mui-media-body">
-									<font class="common-font-family-Regular dynamic-comment-name">一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十</font>
-									<font class="common-font-family-Regular">：你们家的喇叭花挺好看的呀一二三四五六七八九十</font>
-								</div>
-								<div class="mui-media-body">
-									<font class="common-font-family-Regular dynamic-comment-name">美心木门</font>
-									<font class="common-font-family-Regular">：~\(≧▽≦)/~</font>
-								</div>
-							</div>
-							<div class="mui-col-sm-12 mui-col-xs-12">
-								<button type="button" class="mui-btn dynamic-comment-btn"><p class="mui-pull-left">评论</p></button>
 							</div>
 						</div>
-					</li>-->
-				</ul >
+
+					</li>
+				</ul>
 			</div>
 		</div>
 	</body>
 	<script>
-		mui.init({
-			pullRefresh: {
-				container: '#pullrefresh',
-				down: {
-					callback: pulldownRefresh
-				},
-				up: {
-					contentrefresh: '正在加载...',
-					callback: pullupRefresh
-				}
-			}
-		});
-		/**
-		 * 下拉刷新具体业务实现
-		 */
-		function pulldownRefresh() {
-			id = id + 1;
-			setTimeout(function() {
-				var table = document.body.querySelector('.mui-table-view');
-				table.innerHTML = '';
-				var data = addData();
-				dynamiclistitem.addItem(table, data, id);
-				mui('#pullrefresh').pullRefresh().endPulldownToRefresh(); //refresh completed
-			}, 1500);
-		}
-
-		/**
-		 * 上拉加载具体业务实现
-		 */
-		function pullupRefresh() {
-			id = id + 1;
-			setTimeout(function() {
-				mui('#pullrefresh').pullRefresh().endPullupToRefresh(); //参数为true代表没有更多数据了。
-				var table = document.body.querySelector('.mui-table-view');
-				var data = addData();
-				dynamiclistitem.addItem(table, data, id);
-			}, 1500);
-		}
-		var id = 0;
-		mui.plusReady(function() {
-			var table = document.body.querySelector('.mui-table-view');
-			var data = addData();
-			dynamiclistitem.addItem(table, data, id);
-			var click = []; //记录被点击的li的id和被点击元素
-
-			mui('.mui-table-view').on('tap', '.mui-table-view-cell', function() {
-				var toast = '';
-				mui.each(click, function(index, element) {
-					toast = toast + element;
-				});
-				var id = this.getAttribute('id');
-				click.push(id);
-				mui.toast('li-id:' + click[click.length - 1] + '-' + toast);
-				click = [];
-			});
-
-			mui('.mui-table-view').on('tap', '.dynamic-personal-image', function() {
-				click.push('头像');
-			});
-			mui('.mui-table-view').on('tap', 'h4', function() {
-				click.push('姓名');
-			});
-			mui('.mui-table-view').on('tap', '.mui-icon-arrowdown', function() {
-				click.push('向下按钮');
-			});
-			mui('.mui-table-view').on('tap', '.dynamic-contenttext', function() {
-				click.push('动态文字');
-			});
-			mui('.mui-table-view').on('tap', '.dynamic-image', function() {
-				click.push('图片' + this.getAttribute('src'));
-			});
-			mui('.mui-table-view').on('tap', '.dynamic-image-more', function() {
-				click.push('更多图片');
-			});
-			mui('.mui-table-view').on('tap', '.dynamic-icon-praise', function() {
-				click.push('点赞');
-			});
-			mui('.mui-table-view').on('tap', '.dynamic-icon-comment', function() {
-				click.push('评论');
-			});
-			mui('.mui-table-view').on('tap', '.dynamic-icon-forward', function() {
-				click.push('分享');
-			});
-			mui('.mui-table-view').on('tap', '.dynamic-praise-name', function() {
-				click.push('点赞者：' + this.innerText);
-			});
-			mui('.mui-table-view').on('tap', '.dynamic-comment-name', function() {
-				click.push('评论者：' + this.innerText);
-			});
-			mui('.mui-table-view').on('tap', '.dynamic-comment-btn', function() {
-				click.push('评论按钮');
-			});
-		});
-
-		//加载数据
-		function addData() {
-			//[[InfoList],[ImageList],[InteractionList]]动态的信息
-			var Data = [];
-			var InfoList = []; //头部和内容
-			var ImageList = []; //内容的图片
-			var InteractionList = []; //底部内容
-
-			//个人信息和内容
-			//[personalImage,personalName,time,contentText]个人头像，姓名，发布时间，动态内容的文字
-			var personalImage = '../../image/dynamic/u101.png';
-			var personalName = '李媛媛';
-			var time = '10月12日 10:55';
-			var contentText = '哎吆，几天不见都成艺术家了';
-			InfoList.push(personalImage);
-			InfoList.push(personalName);
-			InfoList.push(time);
-			InfoList.push(contentText);
-
-			//内容的图片
-			//[[ImageUrlList],ImageNum],动态内容的图片路径数组,图片总数量
-			var ImageUrlList = [];
-			if(id == 0) {
-				ImageUrlList = [
-				];
-			} else if(id == 1) {
-				ImageUrlList = [
-				];
-			} else if(id == 2) {
-				ImageUrlList = [
-				];
-			} else if(id == 3) {
-				ImageUrlList = [];
-			} else if(id == 4) {
-				ImageUrlList = [];
-			} else if(id == 5) {
-				ImageUrlList = [];
-			}
-			var ImageNum = ImageUrlList.length;
-			ImageList.push(ImageUrlList);
-			ImageList.push(ImageNum);
-
-			//底部
-			//[introduce，viewCount，[praiseList],[commentList]]信息说明，浏览次数，点赞列表数组，评论列表数组
-			var introduce = '';
-			var viewCount = 30;
-			var praiseList = [];
-
-			//[commentList]:评论列表
-			//1.评论[commenter,content]，评论者，评论内容
-			//2.回复[replyer，commenter，replyContent]回复者，评论者，回复的内容
-			var commentList = [];
-			var replyer1 = ['赵雨欣', '李媛媛', '艺术源于生活'];
-			commentList.push(replyer1);
-
-			InteractionList.push(introduce);
-			InteractionList.push(viewCount);
-			InteractionList.push(praiseList);
-			InteractionList.push(commentList);
-
-			Data = [InfoList, ImageList, InteractionList]
-			return Data;
-		}
+		//		mui.init({
+		//			pullRefresh: {
+		//				container: '#pullrefresh',
+		//				down: {
+		//					callback: pulldownRefresh
+		//				},
+		//				up: {
+		//					contentrefresh: '正在加载...',
+		//					callback: pullupRefresh
+		//				}
+		//			}
+		//		});
+		//		/**
+		//		 * 下拉刷新具体业务实现
+		//		 */
+		//		function pulldownRefresh() {
+		//			id = id + 1;
+		//			setTimeout(function() {
+		//				var table = document.body.querySelector('.mui-table-view');
+		//				table.innerHTML = '';
+		//				var data = addData();
+		//				dynamiclistitem.addItem(table, data, id);
+		//				mui('#pullrefresh').pullRefresh().endPulldownToRefresh(); //refresh completed
+		//			}, 1500);
+		//		}
+		//
+		//		/**
+		//		 * 上拉加载具体业务实现
+		//		 */
+		//		function pullupRefresh() {
+		//			id = id + 1;
+		//			setTimeout(function() {
+		//				mui('#pullrefresh').pullRefresh().endPullupToRefresh(); //参数为true代表没有更多数据了。
+		//				var table = document.body.querySelector('.mui-table-view');
+		//				var data = addData();
+		//				dynamiclistitem.addItem(table, data, id);
+		//			}, 1500);
+		//		}
+		//		var id = 0;
+		//		mui.plusReady(function() {
+		//			var table = document.body.querySelector('.mui-table-view');
+		//			var data = addData();
+		//			dynamiclistitem.addItem(table, data, id);
+		//			var click = []; //记录被点击的li的id和被点击元素
+		//
+		//			mui('.mui-table-view').on('tap', '.mui-table-view-cell', function() {
+		//				var toast = '';
+		//				mui.each(click, function(index, element) {
+		//					toast = toast + element;
+		//				});
+		//				var id = this.getAttribute('id');
+		//				click.push(id);
+		//				mui.toast('li-id:' + click[click.length - 1] + '-' + toast);
+		//				click = [];
+		//			});
+		//
+		//			mui('.mui-table-view').on('tap', '.dynamic-personal-image', function() {
+		//				click.push('头像');
+		//			});
+		//			mui('.mui-table-view').on('tap', 'h4', function() {
+		//				click.push('姓名');
+		//			});
+		//			mui('.mui-table-view').on('tap', '.mui-icon-arrowdown', function() {
+		//				click.push('向下按钮');
+		//			});
+		//			mui('.mui-table-view').on('tap', '.dynamic-contenttext', function() {
+		//				click.push('动态文字');
+		//			});
+		//			mui('.mui-table-view').on('tap', '.dynamic-image', function() {
+		//				click.push('图片' + this.getAttribute('src'));
+		//			});
+		//			mui('.mui-table-view').on('tap', '.dynamic-image-more', function() {
+		//				click.push('更多图片');
+		//			});
+		//			mui('.mui-table-view').on('tap', '.dynamic-icon-praise', function() {
+		//				click.push('点赞');
+		//			});
+		//			mui('.mui-table-view').on('tap', '.dynamic-icon-comment', function() {
+		//				click.push('评论');
+		//			});
+		//			mui('.mui-table-view').on('tap', '.dynamic-icon-forward', function() {
+		//				click.push('分享');
+		//			});
+		//			mui('.mui-table-view').on('tap', '.dynamic-praise-name', function() {
+		//				click.push('点赞者：' + this.innerText);
+		//			});
+		//			mui('.mui-table-view').on('tap', '.dynamic-comment-name', function() {
+		//				click.push('评论者：' + this.innerText);
+		//			});
+		//			mui('.mui-table-view').on('tap', '.dynamic-comment-btn', function() {
+		//				click.push('评论按钮');
+		//			});
+		//		});
+		//
+		//		//加载数据
+		//		function addData() {
+		//			//[[InfoList],[ImageList],[InteractionList]]动态的信息
+		//			var Data = [];
+		//			var InfoList = []; //头部和内容
+		//			var ImageList = []; //内容的图片
+		//			var InteractionList = []; //底部内容
+		//
+		//			//个人信息和内容
+		//			//[personalImage,personalName,time,contentText]个人头像，姓名，发布时间，动态内容的文字
+		//			var personalImage = '../../image/dynamic/u101.png';
+		//			var personalName = '李媛媛';
+		//			var time = '10月12日 10:55';
+		//			var contentText = '哎吆，几天不见都成艺术家了';
+		//			InfoList.push(personalImage);
+		//			InfoList.push(personalName);
+		//			InfoList.push(time);
+		//			InfoList.push(contentText);
+		//
+		//			//内容的图片
+		//			//[[ImageUrlList],ImageNum],动态内容的图片路径数组,图片总数量
+		//			var ImageUrlList = [];
+		//			if(id == 0) {
+		//				ImageUrlList = [
+		//				];
+		//			} else if(id == 1) {
+		//				ImageUrlList = [
+		//				];
+		//			} else if(id == 2) {
+		//				ImageUrlList = [
+		//				];
+		//			} else if(id == 3) {
+		//				ImageUrlList = [];
+		//			} else if(id == 4) {
+		//				ImageUrlList = [];
+		//			} else if(id == 5) {
+		//				ImageUrlList = [];
+		//			}
+		//			var ImageNum = ImageUrlList.length;
+		//			ImageList.push(ImageUrlList);
+		//			ImageList.push(ImageNum);
+		//
+		//			//底部
+		//			//[introduce，viewCount，[praiseList],[commentList]]信息说明，浏览次数，点赞列表数组，评论列表数组
+		//			var introduce = '';
+		//			var viewCount = 30;
+		//			var praiseList = [];
+		//
+		//			//[commentList]:评论列表
+		//			//1.评论[commenter,content]，评论者，评论内容
+		//			//2.回复[replyer，commenter，replyContent]回复者，评论者，回复的内容
+		//			var commentList = [];
+		//			var replyer1 = ['赵雨欣', '李媛媛', '艺术源于生活'];
+		//			commentList.push(replyer1);
+		//
+		//			InteractionList.push(introduce);
+		//			InteractionList.push(viewCount);
+		//			InteractionList.push(praiseList);
+		//			InteractionList.push(commentList);
+		//
+		//			Data = [InfoList, ImageList, InteractionList]
+		//			return Data;
+		//		}
 	</script>
 
 </html>
